--- a/index.html
+++ b/index.html
@@ -941,8 +941,7 @@
           </div>
         </div>
       </div>
-      <iframe src='https://my.spline.design/untitled-0b51b30a93a64086c5a95aac37d03526/' frameborder='0' width='100%'
-        height='100%'></iframe>
+      <iframe src='https://my.spline.design/debidedtagheuer-6303f5e361bc2f021765d7240a07f913/' frameborder='0' width='100%' height='100%'></iframe>
     </section> <!-- 🌟🌟🌟🌟🌟🌟🌟🌟🌟🌟🌟🌟🌟🌟 tourbillon -->
 
     <section class="tourbillon-detail">
