--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="kim-dabin">
+  <meta name="description" content="태그호이어 사이트를 리뉴얼 하여 만든 사이트 입니다.">
+  <meta name="keywords" content="태그호이어, 명품시계, 아쿠아레이서, 모나코, 오토비아, 포뮬러, 링크, 까레라, 시계, 명품, 백화점, 사이트만들기">
   <title>Tag Heuer</title>
 
   <!-- favicon -->
   <link rel="shortcut icon" href="./img/menu-logo.svg" type="favicon">
+  
   <!-- font -->
   <!-- font-family: "Noto Sans", sans-serif; -->
   <!-- font-family: "Chakra Petch", sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
+  
   <!-- fontawesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <!-- slick -->
